...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_okay"
                style="@style/MaterialButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Okay" />

        </LinearLayout>


    </LinearLayout>

...
