...
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_authentication"
    app:startDestination="@id/fragment_Login">

    <fragment
        android:id="@+id/fragment_Login"
        android:name="org.rmj.guanzongroup.authlibrary.UserInterface.Login.Fragment_Login"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
...
