...
        android:gravity="center"
        android:paddingVertical="20dp"
        android:paddingHorizontal="50dp"
        android:background="@drawable/background_dialog">

        <TextView
            android:id="@+id/lbl_dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Samsung Knox"
            android:textSize="21sp"
            android:textAlignment="center"
            android:gravity="center"
...
